--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 APP_PORT=3000
+
+POSTGRES_USER=root
+POSTGRES_PASSWORD=
+POSTGRES_DB=air_quality
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
