--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ POSTGRES_DB=air_quality
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
+
+IQAIR_API_URL=http://api.airvisual.com
+IQAIR_API_KEY=
