--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "migrate": "dotenv -e .env.development -- prisma migrate dev --name init"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.4.2",
+    "axios": "^1.5.1",
     "dotenv-cli": "^7.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
