--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate": "dotenv -e .env.development -- prisma migrate dev --name init"
+    "migrate": "dotenv -e .env.development -- prisma migrate dev"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
@@ -26,6 +26,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
     "dotenv-cli": "^7.3.0",
