--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.0",
+    "@nestjs/swagger": "^7.1.14",
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
     "dotenv-cli": "^7.3.0",
